fix for banner links with wrong background colour when active

--- a/app/webroot/css/account.css
+++ b/app/webroot/css/account.css
@@ -57,6 +57,7 @@ nav.tabs li.active a { color:#000; font-weight:bold; background:-webkit-gradient
 .box .banner ul.left li a { font-size:12px; color:#03C; padding:0 1px; }
 .box .banner ul.left li a:hover { text-decoration:none; background-color:#03C; color:#FFFFFF; }
 .box .banner ul.left li.active a { color:black; text-decoration:none; font-weight:bold; }
+.box .banner ul.left li.active a:hover { background-color:transparent; }
 
 .box .banner ul.right { position:absolute; top:16px; right:20px; }
 .box .banner ul.right li {}
